objects/cwbtool__CWB_Setup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>cwbtool__BasicReportInSingleWorksheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basic Report In Single Worksheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>It is required because might be your org have a lot of object and profiles and It will be hit salesforce governor limit  like (heap size or 50001 query limit).

We recommended to adjust batch size accordingly</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__EnableToolingAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Tooling API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__ErrorLog__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you want to log exception for the debug.</inlineHelpText>
        <label>Error Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__IncludeHistoryShareFeedObject__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Include History,Share Feed object in basic report</inlineHelpText>
        <label>Include History,Share Feed object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__Include_Managed_Package_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Managed Package Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__LogUserDetailInHistory_Log__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Log User Name,Email,User Id and Name in history log.</inlineHelpText>
        <label>Log User Detail in History Log</label>
        <type>Checkbox</type>
    </fields>
    <label>CWB Setup</label>
</CustomObject>